[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcon"
version = "0.1.0"
description = "本地漏洞情报悬浮球应用 - 自动收集、整合、评分和展示漏洞情报"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Remove unused imports in CI, but allow for UI files
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"app/ui/*.py" = ["E501", "F401"]

[tool.setuptools.packages.find]
include = ["app*"]
