[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcon-osint-assistant"
version = "0.2.0"
description = "Local vulnerability intelligence and OSINT assistant — desktop floating-ball app"
requires-python = ">=3.11,<3.14"
dependencies = [
    "PySide6>=6.6.0,<7.0",
    "httpx>=0.27.0,<0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "apscheduler>=3.10.4,<4.0",
    "loguru>=0.7.2,<0.8",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
rcon = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"app/ui/*.py" = ["E501"]
"tests/*.py" = ["F401"]

[tool.setuptools.packages.find]
include = ["app*"]
